update progress bar

--- a/Cross Platform/music_player/web/index.html
+++ b/Cross Platform/music_player/web/index.html
@@ -29,8 +29,8 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>music_player</title>
   <link rel="manifest" href="manifest.json">
+  <title>iMusic</title>
 
   <script>
     // The value below is injected by flutter build, do not touch.
